<resources>
    <string name="app_name">Cody Tutorials</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="email_address">rikmenv@yandex.ru</string>
    <string name="action_settings">Настройки</string>
    <string name="title_nav_menu">Cody Tutorials</string>
    <string name="title_mail_nav">codytutorials@gmail.com</string>
    <string name="title_toolbar_java">Java</string>
    <string name="menu_java">Java</string>
    <string name="menu_javaScript">JavaScript</string>
    <string name="menu_python">Python</string>
    <string name="menu_web">WEB</string>
    <string name="menu_communicate">Связь</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_send">Напиши нам</string>

    <string name="tab_item_manuals">Методичка</string>
    <string name="tab_item_player">Подкасты</string>


    <!-- Write your description about profile menu for tab 1 and tab 2 -->
    <string name="profile_tab1">Здесь будет Плейлист Java</string>
    <string name="profile_tab2">
		<p><strong>Книга или методичка Java</strong>
        Здесь будет текст как в книге Java</p>
	</string>
    <string name="profile_tab3">Здесь будет Плейлист JavaScript</string>
    <string name="profile_tab4">Здесь книга или методичка JavaScript</string>
    // пока заглушки!!!
    <string name="title_activity_preferences">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="str_contact">Связь с нами</string>
    <string name="txt_add_text">Введите свой текст..</string>
    <string name="txt_send">Отправить</string>
    <string name="search">Поиск</string>
    <string name="failed">Не удалось инициализировать Youtube Player</string>
    <string name="setting">Настройки</string>
    <string name="video">Поиск видео на YouTube</string>
    <string name="about">О приложении</string>
    <string name="rate">Оценить приложение</string>
    <string name="more">Больше приложений</string>
    <string name="app_version">1.0.0</string>
    <string name="copyright">Copyright &#169; 2017 codytutorials@gmail.com \n Все права защищены</string>
    <string name="txt_settings">Здесь будут настройки приложения</string>
    <string name="more_apps">https://play.google.com/store/apps/collection/topselling_free?hl=ru</string>
    <string name="menu">Меню</string>
    <string name="txt_welcom">Добро пожаловать!</string>
    <string name="hint_search">Поиск</string>
    <string name="forward">вперед</string>
    <string name="pause">Пауза</string>
    <string name="back">Назад</string>
    <string name="rewind">rewind</string>
    <string name="btnPlay">Играть</string>
    <string name="music_palyer">Music Palyer</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_btn_entry">Вход</string>
    <string name="auth_btn_register">Регистрация</string>
    <string name="detail_title_default">Заголовок по умолчанию</string>
</resources>


