<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_java"
            android:icon="@mipmap/ic_code_braces"
            android:title="@string/menu_java" />
        <item
            android:id="@+id/nav_javaScript"
            android:icon="@mipmap/ic_language_javascript"
            android:title="@string/menu_javaScript" />
        <item
            android:id="@+id/nav_python"
            android:icon="@mipmap/ic_language_python"
            android:title="@string/menu_python" />
        <item
            android:id="@+id/nav_web"
            android:icon="@mipmap/ic_web"
            android:title="@string/menu_web" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
